@@ -1,3 +1,9 @@
+2013-08-27  Pedro Alves  <palves@redhat.com>
+
+	* darwin-nat.c (darwin_xfer_memory): Delete.
+	(_initialize_darwin_inferior): Don't install a
+	deprecated_xfer_memory method.
+
 2013-08-27  Pedro Alves  <pedro@codesourcery.com>
 	    Yao Qi  <yao@codesourcery.com>
 
